re-parse-proc-macro/tests/compile_fail/ambiguous_variable.stderr
error: Ambiguous variables: variable collides with other_variable. Make sure that variables are always separated by a character, so it is possible to tell them apart.
 --> tests/compile_fail/ambiguous_variable.rs:4:15
  |
4 |     re_parse!("Foo{variable}B*{other_variable}C", "Foo111B222C")
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
